# mcp_obsi

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LAYOUT.md  README.md  README_paych.md  SYSTEM_ARCHITECTURE.md  Task.md  Untitled-1.ini  app.py  changelog.md  commit_msg.txt  doc_diff.txt  install_cursor_fullsetup.bat  install_cursor_fullsetup.ps1  local_research_assistant.md  make-shortcuts.ps1  patchgpt.md  patchgpt2.md  patchupgrade.md  plan.md  plan_a.md  pyproject.toml  pytest_out.txt  read_issue.py  run_ingest.py  run_obsidian_query.py  start-all.ps1  write_issue.py  스킬TEST보고서.MD
local-rag/: .env.example  healthcheck.ps1  pyproject.toml  run-local.bat  run-local.ps1
local-rag/.cache/: query-cache.json  retrieval-cache.json
local-rag/app/: main.py  ollama_client.py  retrieval.py
local-rag/local_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
local-rag/tests/: test_app.py
mcp_obsi-main/: .cursorignore  .dockerignore  .env.production.example  .env.railway.production.example  .pre-commit-config.yaml  CODEOWNERS  One-Page Architecture.md  SYSTEM_ARCHITECTURE.md  Spec.md  Start MStack.lnk  Stop MStack.lnk  install_cursor_fullsetup.ps1  plan-2026-04-11-llm-wiki-mcp-upgrade.md  plan.md  pyproject.toml  run_obsidian_query.py  schema.sql  spec_a.md  stop-all.ps1  task_a.md  입력.MD
mcp_obsi-main/.cursor/: hooks.json
mcp_obsi-main/Logi ontol core doc/: 20260319_ontology_sidecar.sql  CONSOLIDATED-02-warehouse-flow.md  HVDC Logistics cost(inland,domestic).xlsx  Role.md
mcp_obsi-main/app/: prompts_server.py
mcp_obsi-main/docs/: CLAUDE_COWORK_MCP_OUTSOURCE_BRIEF.md  HMAC_PHASE_2.md  INSTALL_WINDOWS.md  PRODUCTION_VPS_RUNBOOK.md  RAILWAY_PREVIEW_RUNBOOK.md  REMOTE_DEPLOYMENT_MATRIX.md  RUNBOOK.md  Spec.md  VERIFICATION_PURGE_RUNBOOK.md  storage-routing.md
mcp_obsi-main/kg-dashboard/: index.html  plan-2026-04-10-next-step.md  plan.md
mcp_obsi-main/local-rag/: README.md
mcp_obsi-main/myagent-copilot-kit/: .env.local.example  run-standalone-public.sh
mcp_obsi-main/obsidian-memory-plugin/: manifest.json
mcp_obsi-main/paste_exports/: cinematic_body.md
mcp_obsi-main/schemas/: memory-item-v2.schema.json
mcp_obsi-main/scripts/: bootstrap_vault_layout.py  check_cursor_mcp_status.ps1  start-mcp-dev.ps1  test_routing_smoke.py  verify_hmac_integrity.py  verify_mcp_secret_paths.py  verify_mcp_write_once.py  verify_specialist_mcp_write.py
mcp_obsi-main/tests/: test_claude_mcp_server.py  (+7 more)
(+493 files in other folders)
