[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag"
version = "0.1.0"
description = "Minimal local retrieval and generation service for standalone-package"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "requests",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
testpaths = ["tests"]
