[project]
name = "obsidian-mcp-mvp"
version = "0.1.0"
description = "Obsidian-backed memory MCP server with FastAPI + FastMCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "mcp[cli]>=1.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
